# VulkanGameEngineExperiment

./: .clang-format  .gitignore  ASSESSMENT.md  CMakeLists.txt  GUI.cpp  GUI.h  GraphicsManager.cpp  GraphicsManager.h  README.md  VOXEL_RENDERING.md  build.sh  darkestPlanet.cpp  plans.md  run.sh
.cursor/rules/: engine.mdc
Engine/Graphics/: GraphicsManager.cpp  GraphicsManager.h
Engine/Graphics/Drivers/: IGraphicsDriver.h
Engine/Graphics/Drivers/Dummy/: Dummy.cpp  Dummy.h
Engine/Graphics/Drivers/Vulkan/: CommandBuffer.cpp  CommandPool.cpp  DebugMessenger.cpp  DefaultTexture.cpp  DepthResources.cpp  DescriptorPool.cpp  GraphicsPipeline.cpp  Helpers.cpp  ImageViews.cpp  LogicalDevice.cpp  Mesh.cpp  Mesh.h  Model.cpp  PhysicalDevice.cpp  QueueFamily.cpp  RenderObject.h  RenderPass.cpp  ResourceManager.cpp  Surface.cpp  SwapChain.cpp  Texture.cpp  Texture.h  UniformBufferObject.cpp  Vertex.cpp  Vertex.h  VertexBuffer.cpp  Vulkan.cpp  Vulkan.h  VulkanInstance.cpp
Utils/: FileUtils.cpp  FileUtils.h
shaders/: triangle.frag  triangle.vert
